fixed dark mode issue with hero text and nav links disapearing

--- a/src/index.css
+++ b/src/index.css
@@ -68,7 +68,3 @@ body.dark {
   background-color: var(--color-text);
   color: var(--color-accent);
 }
-
-.dark {
-  color: var(--color-accent);
-}
